# duckdb-notebooks

./: README.md  pyproject.toml  template.ipynb
